--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,6 @@
   }
 
   .btn {
-    @apply h-7 hover:scale-125 cursor-pointer transition-all duration-150 ease-out;
+    @apply h-7 hover:text-gray-400 cursor-pointer;
   }
 }
