--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,4 +21,8 @@
     cursor-pointer hover:scale-110 transition transform
     duration-200 ease-out active:scale-95;
   }
+
+  .inputForm {
+    @apply w-full h-[2.3rem] border-gray-300 rounded-[4px] placeholder:text-sm mt-1.5;
+  }
 }
